--- a/HW4/index.html
+++ b/HW4/index.html
@@ -3,7 +3,7 @@
   <body>
     <h1>Hello World</h1>
     <p>My website on GitHub Pages. It works!</p>
-    <script src="scriptM4+.js"></script>
+    <script src="script4.js"></script>
     <!-- <script src="script11.js"></script> -->
   </body>
 </html>
